--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h2 id="title">Welcome to Ember</h2>
+{{#jquery-backstretch images=backstretchImages}}
+  <h2 id="title">Welcome to Ember</h2>
 
-{{outlet}}
+  {{outlet}}
+{{/jquery-backstretch}}
